<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>it.mmariotti</groupId>
	<artifactId>COVID-19</artifactId>
	<version>0.1</version>
	<packaging>war</packaging>

	<prerequisites>
		<maven>3.6</maven>
	</prerequisites>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<skipInstall>false</skipInstall>

		<app.contextroot>covid19</app.contextroot>
		<app.database>covid19</app.database>
		<app.datasource>java:/jdbc/covid19</app.datasource>

		<jsf.projectStage>Development</jsf.projectStage>
		<jsf.disableIdUniquenessCheck>false</jsf.disableIdUniquenessCheck>
		<jsf.defaultResourceMaxAge>604800000</jsf.defaultResourceMaxAge>
		<jsf.faceletsRefreshPeriod>0</jsf.faceletsRefreshPeriod>

		<jpa.schema.generation>none</jpa.schema.generation>
		<jpa.hibernate.dialect>org.hibernate.dialect.MySQL57Dialect</jpa.hibernate.dialect>
		<jpa.hibernate.query.validate_parameters>true</jpa.hibernate.query.validate_parameters>

		<jdbc.datasourceClass>com.mysql.cj.jdbc.MysqlDataSource</jdbc.datasourceClass>
		<jdbc.driverClass>com.mysql.cj.jdbc.Driver</jdbc.driverClass>
		<jdbc.url>jdbc:mysql://localhost:3306/${app.database}?useSSL=false&amp;amp;allowPublicKeyRetrieval=true&amp;amp;useLocalSessionState=true&amp;amp;rewriteBatchedStatements=true</jdbc.url>
		<jdbc.user>root</jdbc.user>
		<jdbc.password>password</jdbc.password>

		<bouncycastle.version>1.60</bouncycastle.version>
		<buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
		<commons-beanutils.version>1.9.4</commons-beanutils.version>
		<commons-codec.version>1.13</commons-codec.version>
		<commons-collections4.version>4.4</commons-collections4.version>
		<commons-digester.version>2.1</commons-digester.version>
		<commons-email.version>1.5</commons-email.version>
		<commons-fileupload.version>1.4</commons-fileupload.version>
		<commons-io.version>2.5</commons-io.version><!-- version 2.6 is bogus!! -->
		<commons-lang3.version>3.9</commons-lang3.version>
		<commons-text.version>1.8</commons-text.version>
		<derby.version>10.15.1.3</derby.version>
		<ecj.version>3.19.0</ecj.version>
		<ews-java-api.version>2.0</ews-java-api.version>
		<exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
		<gson.version>2.8.5</gson.version>
		<guava.version>28.1-jre</guava.version>
		<hibernate.version>5.2.18.Final</hibernate.version>
		<iso9660-writer.version>2.0.1</iso9660-writer.version>
		<itextpdf.version>5.5.6</itextpdf.version>
		<javaee.version>7.0</javaee.version>
		<javassist.version>3.20.0-GA</javassist.version>
		<jna.version>5.5.0</jna.version>
		<jsoup.version>1.12.1</jsoup.version>
		<junit-jupiter.version>5.5.2</junit-jupiter.version>
		<liquibase.version>3.8.2</liquibase.version>
		<logback.version>1.2.3</logback.version>
		<mariaDB4j.version>2.4.0</mariaDB4j.version>
		<maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
		<maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<maven-core.version>3.6.3</maven-core.version>
		<maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
		<maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
		<maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
		<maven-install-plugin.version>2.5.2</maven-install-plugin.version>
		<maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
		<maven-plugin-annotations.version>3.6.0</maven-plugin-annotations.version>
		<maven-plugin-api.version>3.6.3</maven-plugin-api.version>
		<maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
		<maven-processor-plugin.version>3.3.3</maven-processor-plugin.version>
		<maven-project-info-reports-plugin.version>3.0.0</maven-project-info-reports-plugin.version>
		<maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
		<maven-scm-plugin.version>1.11.2</maven-scm-plugin.version>
		<maven-site-plugin.version>3.8.2</maven-site-plugin.version>
		<maven-source-plugin.version>3.2.0</maven-source-plugin.version>
		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
		<maven-war-plugin.version>3.2.3</maven-war-plugin.version>
		<mojarra.version>2.2.20</mojarra.version>
		<mpxj.version>7.9.7</mpxj.version>
		<mysqlconnector.version>8.0.15</mysqlconnector.version>
		<omnifaces.version>2.7.3</omnifaces.version>
		<openoffice.version>4.1.2</openoffice.version>
		<plexus-compiler-api.version>2.8.5</plexus-compiler-api.version>
		<poi.version>3.17</poi.version>
		<primefaces-extensions.version>6.1.1</primefaces-extensions.version>
		<primefaces.version>6.1.6</primefaces.version>
		<reflections.version>0.9.11</reflections.version>
		<simple-jndi.version>0.11.4.1</simple-jndi.version>
		<snakeyaml.version>1.24</snakeyaml.version>
		<streamex.version>0.7.2</streamex.version>
		<tika.version>1.22</tika.version>
		<typetools.version>0.6.1</typetools.version>
		<versions-maven-plugin.version>2.7</versions-maven-plugin.version>
		<wagon.version>2.12</wagon.version>
		<wildfly.version>10.1.0.Final</wildfly.version>
		<xlsx-streamer.version>2.1.0</xlsx-streamer.version>
		<zxing.version>3.4.0</zxing.version>

		<jboss.home>C:\Shape\servers\wildfly-${wildfly.version}</jboss.home>
	</properties>


	<dependencies>
		<!-- ECLIPSE COMPILER -->
		<dependency>
			<groupId>org.codehaus.plexus</groupId>
			<artifactId>plexus-compiler-api</artifactId>
			<version>${plexus-compiler-api.version}</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jdt</groupId>
			<artifactId>ecj</artifactId>
			<version>${ecj.version}</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>${javaee.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${hibernate.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-jpamodelgen</artifactId>
			<version>${hibernate.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.sun.faces</groupId>
			<artifactId>jsf-api</artifactId>
			<version>${mojarra.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.faces</groupId>
			<artifactId>jsf-impl</artifactId>
			<version>${mojarra.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.primefaces</groupId>
			<artifactId>primefaces</artifactId>
			<version>${primefaces.version}</version>
		</dependency>
		<dependency>
			<groupId>org.primefaces.extensions</groupId>
			<artifactId>primefaces-extensions</artifactId>
			<version>${primefaces-extensions.version}</version>
		</dependency>

		<dependency>
			<groupId>org.omnifaces</groupId>
			<artifactId>omnifaces</artifactId>
			<version>${omnifaces.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>

		<dependency>
			<groupId>one.util</groupId>
			<artifactId>streamex</artifactId>
			<version>${streamex.version}</version>
		</dependency>
	</dependencies>


	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test</testSourceDirectory>
		<scriptSourceDirectory>scripts</scriptSourceDirectory>
		<outputDirectory>target/classes</outputDirectory>

		<resources>
			<resource>
				<directory>src</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<testResources>
			<testResource>
				<directory>test</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>${maven-clean-plugin.version}</version>
			</plugin>

			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven-dependency-plugin.version}</version>
			</plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven-resources-plugin.version}</version>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
					<compilerId>eclipse</compilerId>
					<compilerArguments>
						<properties>.settings/org.eclipse.jdt.core.prefs</properties>
					</compilerArguments>
					<annotationProcessorPaths>
						<annotationProcessorPath>
							<groupId>org.hibernate</groupId>
							<artifactId>hibernate-jpamodelgen</artifactId>
							<version>${hibernate.version}</version>
						</annotationProcessorPath>
					</annotationProcessorPaths>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.plexus</groupId>
						<artifactId>plexus-compiler-eclipse</artifactId>
						<version>${plexus-compiler-api.version}</version>
					</dependency>
					<dependency>
						<groupId>org.eclipse.jdt</groupId>
						<artifactId>ecj</artifactId>
						<version>${ecj.version}</version>
					</dependency>
				</dependencies>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
                    <!-- <configuration>
                        <argLine> - - illegal-access=permit</argLine>
                    </configuration> -->
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
				<configuration>
					<argLine>--illegal-access=permit</argLine>
				</configuration>
			</plugin>


			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>${maven-war-plugin.version}</version>
				<configuration>
					<warSourceDirectory>WebContent</warSourceDirectory>
					<failOnMissingWebXml>false</failOnMissingWebXml>
					<filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
					<webResources>
						<webResource>
							<directory>WebContent/WEB-INF</directory>
							<filtering>true</filtering>
							<include>jboss-web.xml</include>
							<targetPath>/WEB-INF</targetPath>
						</webResource>
					</webResources>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
						<manifestEntries>
							<SCM-Revision>${buildNumber}</SCM-Revision>
							<URL>${project.url}</URL>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-install-plugin</artifactId>
				<version>${maven-install-plugin.version}</version>
				<configuration>
					<skip>${skipInstall}</skip>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven-deploy-plugin.version}</version>
			</plugin>

			<plugin>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven-site-plugin.version}</version>
			</plugin>


		</plugins>

		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-http</artifactId>
				<version>${wagon.version}</version>
			</extension>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ftp</artifactId>
				<version>${wagon.version}</version>
			</extension>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh</artifactId>
				<version>${wagon.version}</version>
			</extension>
		</extensions>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${maven-project-info-reports-plugin.version}</version>
				<configuration>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
			</plugin>
		</plugins>
	</reporting>


	<organization>
		<name>Shape S.p.A.</name>
		<url>http://www.shapeitalia.com</url>
	</organization>

	<licenses>
		<license>
			<name>Shape</name>
			<url>http://www.shapeitalia.com/license.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>mmariotti</id>
			<name>Michele Mariotti</name>
			<email>mmariotti@shapeitalia.com</email>
		</developer>
	</developers>

	<repositories>
		<repository>
			<id>repository.jboss.org</id>
			<name>JBoss Repository</name>
			<url>https://repository.jboss.org/nexus/content/repositories/public</url>
		</repository>
		<repository>
			<id>shapeitalia.com</id>
			<name>Shape Nexus Repository</name>
			<url>http://nexus.shapeitalia.com/repository/maven/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>repository.jboss.org</id>
			<name>JBoss Repository</name>
			<url>https://repository.jboss.org/nexus/content/repositories/public</url>
		</pluginRepository>
		<pluginRepository>
			<id>shapeitalia.com</id>
			<name>Shape Nexus Repository</name>
			<url>http://nexus.shapeitalia.com/repository/maven/</url>
		</pluginRepository>
	</pluginRepositories>

</project>